--- a/index.html
+++ b/index.html
@@ -4,73 +4,149 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Elliot Smith Mentoring & Tutoring</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #fdfdfd;
-      color: #333;
-      line-height: 1.6;
+      font-family: 'Inter', sans-serif;
       margin: 0;
       padding: 0;
+      color: #222;
+      background: #fdfdfd;
     }
     header {
-      background: #3b82f6;
+      background: #f97316;
       color: white;
-      padding: 2rem 1rem;
+      padding: 60px 20px;
       text-align: center;
     }
-    .container {
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 0 1rem;
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
     }
-    h1, h2 {
-      color: #1f2937;
+    header p {
+      font-size: 1.2rem;
+      margin-top: 10px;
+    }
+    .section {
+      padding: 60px 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+    .section h2 {
+      color: #f97316;
+    }
+    ul {
+      padding-left: 1.5rem;
     }
     .cta {
-      background: #facc15;
-      color: #111827;
-      padding: 1rem;
+      background: #f97316;
+      color: white;
       text-align: center;
-      border-radius: 6px;
-      font-weight: bold;
-      margin: 2rem 0;
+      padding: 40px 20px;
+    }
+    .cta button {
+      padding: 12px 24px;
+      font-size: 1rem;
+      background: white;
+      color: #f97316;
+      border: none;
+      cursor: pointer;
+      margin-top: 20px;
     }
     footer {
-      background: #e5e7eb;
+      background: #333;
+      color: white;
       text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
+      padding: 30px 20px;
+    }
+    footer a {
+      color: #f97316;
+      margin: 0 10px;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Elliot Smith Mentoring & Tutoring</h1>
-    <p>Helping students fall in love with learning</p>
+    <h1>Personalized Tutoring for Bright, Curious Minds</h1>
+    <p>From a camp director turned USC honors grad — structure, empathy, and real results.</p>
   </header>
-  <div class="container">
-    <h2>About Me</h2>
-    <p>Hi! I’m Elliot — a USC graduate in Computer Science & Business Administration, and a lifelong educator with a passion for helping students feel excited about learning again.</p>
-    <p>Before tutoring full-time, I ran one of Seattle’s most popular summer camps as Youth Programs Director at the Center for Wooden Boats. I’ve led month-long teen leadership expeditions, coached thousands of students, and built programs that kids actually look forward to.</p>
-    <p>Some of the best compliments I’ve received? That I bring the curiosity of Carl Sagan and the enthusiasm of Steve Irwin into every session. Whether we’re working on executive function, SAT prep, or writing skills, I blend structure with empathy to help students become more confident, focused, and independent — while genuinely enjoying the process.</p>
 
-    <h2>What I Offer</h2>
+  <section class="section">
+    <h2>About Elliot</h2>
+    <p>I’m Elliot, a USC graduate in Computer Science & Business Administration, National Merit Scholar, and former Youth Programs Director at the Center for Wooden Boats — where I ran one of Seattle’s most beloved summer camps. I’m a lifelong educator who blends academic rigor with a camp director’s warmth. I’ve helped thousands of students grow confident, focused, and self-directed — and I’d love to help yours too.</p>
+  </section>
+
+  <section class="section">
+    <h2>Services</h2>
     <ul>
-      <li><strong>Academic Success Coaching:</strong> Personalized support in math, writing, STEM, and study skills. SAT/ACT prep available.</li>
-      <li><strong>Executive Function Mentorship:</strong> Build focus, organization, time management, and confidence. Great for ADHD and neurodivergent learners.</li>
-      <li><strong>Tech & AI Enrichment:</strong> Coding, digital literacy, project-based learning, and future-proof skills.</li>
-      <li><strong>College & Career Prep:</strong> Application strategy, standout essays, and real-world goal setting.</li>
+      <li><strong>Academic Coaching</strong>: Math, writing, STEM, and study skills</li>
+      <li><strong>Executive Function Mentorship</strong>: Focus, organization, time management</li>
+      <li><strong>Tech & AI Enrichment</strong>: Coding, digital literacy, and future-ready skills</li>
+      <li><strong>College & Career Prep</strong>: Applications, standout essays, scholarship coaching</li>
     </ul>
+  </section>
 
-    <div class="cta">
-      Now accepting students ages 8–18. <br>
-      $200/hour · Free 30-minute intro session · Based in Los Angeles <br>
-      <a href="mailto:elliot.tutoring@gmail.com">elliot.tutoring@gmail.com</a> · (425) 505-3630
-    </div>
-  </div>
+  <section class="section">
+    <h2>Who I Work With</h2>
+    <ul>
+      <li>Students ages 8–18</li>
+      <li>Gifted or high-achieving learners</li>
+      <li>Students who are bored, burnt out, or falling behind</li>
+      <li>Teens interested in tech, startups, or creative learning paths</li>
+      <li>Neurodivergent learners (ADHD, ASD, etc.)</li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>Why Families Choose Me</h2>
+    <ul>
+      <li>I blend a camp leader’s heart with academic rigor</li>
+      <li>Students actually enjoy our sessions and grow from them</li>
+      <li>I’ve helped students from all backgrounds find their path</li>
+      <li>I’ve recently navigated college admissions myself — and won scholarships</li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>Testimonials</h2>
+    <blockquote>“Elliot is the first tutor my kid actually looks forward to seeing.” – Parent, Brentwood</blockquote>
+    <blockquote>“He makes learning feel like a conversation, not a chore.” – Student, 11th grade</blockquote>
+    <blockquote>“Elliot helped our daughter go from overwhelmed to thriving.” – Parent, Santa Monica</blockquote>
+  </section>
+
+  <section class="section">
+    <h2>Rates & Availability</h2>
+    <ul>
+      <li>$200/hour</li>
+      <li>Free 30-minute intro call</li>
+      <li>Weekly or biweekly sessions recommended</li>
+      <li>Virtual or in-person (West LA, Santa Monica, Brentwood, Beverly Hills)</li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>FAQs</h2>
+    <ul>
+      <li><strong>Do you work with ADHD students?</strong> Yes — I have years of experience and tools that help.</li>
+      <li><strong>Do you offer group sessions?</strong> No, I focus on 1-on-1 mentorship for maximum impact.</li>
+      <li><strong>Do you give progress updates?</strong> Yes — families receive ongoing communication and support.</li>
+    </ul>
+  </section>
+
+  <section class="cta">
+    <h2>Ready to help your student thrive?</h2>
+    <p>Let’s connect for a free intro call to see if it’s a fit.</p>
+    <button onclick="window.location.href='mailto:elliot.tutoring@gmail.com'">Email Elliot</button>
+  </section>
+
   <footer>
-    &copy; 2024 Elliot Smith Mentoring & Tutoring
+    <p>&copy; 2025 Elliot Smith Mentoring & Tutoring</p>
+    <p>
+      <a href="mailto:elliot.tutoring@gmail.com">elliot.tutoring@gmail.com</a> |
+      <a href="tel:+14255053630">(425) 505-3630</a> |
+      Los Angeles, CA
+    </p>
   </footer>
 </body>
 </html>
