--- a/index.html
+++ b/index.html
@@ -139,7 +139,54 @@
     </div>
   </section>
 
-  <!-- Remaining sections here... (unchanged content) -->
+  <section class="section">
+    <h2>What I Offer</h2>
+    <ul>
+      <li><strong>Academic Success Coaching</strong> – Support in math, writing, STEM, and study skills. SAT/ACT prep available.</li>
+      <li><strong>Executive Function Mentorship</strong> – Build focus, organization, and confidence. Great for ADHD and neurodivergent learners.</li>
+      <li><strong>Tech & AI Enrichment</strong> – Coding, digital literacy, and future-proof skills — taught by someone who lives and builds in tech.</li>
+      <li><strong>College & Career Prep</strong> – Application strategy, standout essays, and finding your path with confidence.</li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>Who I Work With</h2>
+    <ul>
+      <li>Students ages 8–18</li>
+      <li>Gifted or high-achieving learners</li>
+      <li>Students who are bored, burnt out, or falling behind</li>
+      <li>Teens interested in tech, startups, or creative learning paths</li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>Why Families Choose Me</h2>
+    <ul>
+      <li>I make learning structured <em>and</em> fun — I’ve run entire summer camps, led teen expeditions, and taught thousands of kids.</li>
+      <li>I recently navigated the college application and scholarship process myself — and know how to support students through it.</li>
+      <li>I help students find focus, confidence, and independence — even if they’ve struggled with traditional tutoring in the past.</li>
+      <li>I’m a mentor as much as I am a teacher — I care deeply about helping kids grow into themselves.</li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>Rates & Availability</h2>
+    <ul>
+      <li>$200/hour</li>
+      <li>Free 30-minute intro session for new families</li>
+      <li>Virtual or in-person in Los Angeles (Brentwood, Santa Monica, Beverly Hills, West LA)</li>
+      <li>Weekly or biweekly sessions recommended</li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>FAQ</h2>
+    <ul>
+      <li><strong>Q: What subjects do you tutor?</strong><br>A: I specialize in math, writing, executive function, and tech enrichment.</li>
+      <li><strong>Q: Do you work with students who have ADHD or learning differences?</strong><br>A: Absolutely — many of my students are neurodivergent, and I tailor sessions to their strengths.</li>
+      <li><strong>Q: Can you help with college prep?</strong><br>A: Yes — I work on essays, applications, and planning with high school students.</li>
+    </ul>
+  </section>
 
   <section class="cta">
     <h2>Ready to help your student thrive?</h2>
