--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <body>
   <header>
     <h1>Personalized Tutoring for Bright, Curious Minds</h1>
-    <p>From a camp director turned USC honors grad — structure, empathy, and real results.</p>
+    <p>From a STEM camp director and USC Honors Grad — structure, empathy, and real results.</p>
   </header>
 
   <section class="section">
@@ -125,9 +125,13 @@
     <div class="slider-container">
       <button class="arrow left" onclick="moveSlide(-1, 'photo')">❮</button>
       <div class="slider" id="photo-slider">
-        <div class="slide"><img src="https://via.placeholder.com/700x400?text=Camp+1" alt="Camp 1"></div>
-        <div class="slide"><img src="https://via.placeholder.com/700x400?text=Camp+2" alt="Camp 2"></div>
-        <div class="slide"><img src="https://via.placeholder.com/700x400?text=Camp+3" alt="Camp 3"></div>
+        <div class="slide"><img src="/images/tommytrojan.jpg" alt="Camp photo 1"></div>
+        <div class="slide"><img src="/images/rainyday.jpg" alt="Camp photo 1"></div>
+        <div class="slide"><img src="/images/chess.jpg" alt="Camp photo 1"></div>
+        <div class="slide"><img src="/images/formal.jpg" alt="Camp photo 1"></div>
+        <div class="slide"><img src="/images/plane.jpg" alt="Camp photo 1"></div>
+        <div class="slide"><img src="/images/moses.jpg" alt="Camp photo 1"></div>
+        <div class="slide"><img src="/images/kayak.jpg" alt="Camp photo 1"></div>
       </div>
       <button class="arrow right" onclick="moveSlide(1, 'photo')">❯</button>
     </div>
