--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Elliot Smith Mentoring & Tutoring</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
@@ -13,37 +13,46 @@
       color: #1a1a1a;
       background: #f7f7f7;
     }
+
     header {
       background: #3b82f6;
       color: white;
-      padding: 40px 20px;
+      padding: 30px 20px;
       text-align: center;
     }
+
     header h1 {
       margin: 0;
       font-size: 2.5rem;
     }
+
     header p {
       font-size: 1.2rem;
       margin-top: 10px;
     }
+
     .section {
-      padding: 40px 20px;
+      padding: 20px 20px;
       max-width: 900px;
       margin: auto;
     }
+
     .section h2 {
       color: #3b82f6;
+      margin-bottom: 10px;
     }
+
     ul {
       padding-left: 1.5rem;
     }
+
     .cta {
       background: #3b82f6;
       color: white;
       text-align: center;
-      padding: 30px 20px;
+      padding: 20px 20px;
     }
+
     .cta button {
       padding: 12px 24px;
       font-size: 1rem;
@@ -53,36 +62,44 @@
       cursor: pointer;
       margin-top: 20px;
     }
+
     footer {
       background: #222;
       color: white;
       text-align: center;
       padding: 20px 20px;
     }
+
     footer a {
       color: #3b82f6;
       margin: 0 10px;
       text-decoration: none;
     }
+
     .slider-container {
       position: relative;
       max-width: 700px;
-      margin: 20px auto;
+      margin: 20px auto 30px;
       overflow: hidden;
     }
+
     .slider {
       display: flex;
       transition: transform 0.5s ease-in-out;
     }
+
     .slide {
       min-width: 100%;
       box-sizing: border-box;
     }
+
     .slide img {
       width: 100%;
-      height: auto;
+      height: 250px;
+      object-fit: cover;
       border-radius: 10px;
     }
+
     .arrow {
       position: absolute;
       top: 50%;
@@ -94,12 +111,19 @@
       cursor: pointer;
       z-index: 1;
     }
+
     .arrow.left {
       left: 10px;
     }
+
     .arrow.right {
       right: 10px;
     }
+
+    .testimonial-slider {
+      margin-top: 10px;
+    }
+
     .testimonial {
       display: none;
       font-size: 1.1rem;
@@ -107,6 +131,7 @@
       text-align: center;
       padding: 10px;
     }
+
     .testimonial.active {
       display: block;
     }
@@ -126,12 +151,11 @@
       <button class="arrow left" onclick="moveSlide(-1, 'photo')">❮</button>
       <div class="slider" id="photo-slider">
         <div class="slide"><img src="/images/tommytrojan.jpg" alt="Camp photo 1"></div>
-        <div class="slide"><img src="/images/rainyday.jpg" alt="Camp photo 1"></div>
-        <div class="slide"><img src="/images/chess.jpg" alt="Camp photo 1"></div>
-        <div class="slide"><img src="/images/formal.jpg" alt="Camp photo 1"></div>
-        <div class="slide"><img src="/images/plane.jpg" alt="Camp photo 1"></div>
-        <div class="slide"><img src="/images/moses.jpg" alt="Camp photo 1"></div>
-        <div class="slide"><img src="/images/kayak.jpg" alt="Camp photo 1"></div>
+        <div class="slide"><img src="/images/rainyday.jpg" alt="Camp photo 2"></div>
+        <div class="slide"><img src="/images/chess.jpg" alt="Camp photo 3"></div>
+        <div class="slide"><img src="/images/formal.jpg" alt="Camp photo 4"></div>
+        <div class="slide"><img src="/images/plane.jpg" alt="Camp photo 5"></div>
+        <div class="slide"><img src="/images/moses.jpg" alt="Camp photo 6"></div>
       </div>
       <button class="arrow right" onclick="moveSlide(1, 'photo')">❯</button>
     </div>
