--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
     }
 
     .slider-container {
-      position: relative;
-      max-width: 700px;
-      margin: 20px auto 30px;
-      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: auto; /* or set a max-height if needed */
     }
 
     .slider {
@@ -94,10 +94,11 @@
     }
 
     .slide img {
-      width: 100%;
-      height: 250px;
-      object-fit: cover;
+      display: block;
+      max-width: 100%;
+      height: auto;
       border-radius: 10px;
+      margin: 0 auto;
     }
 
     .arrow {
