--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
     }
 
     .slider-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: auto; /* or set a max-height if needed */
+      position: relative;
+      max-width: 700px;
+      margin: 20px auto 30px;
+      overflow: hidden;
     }
 
     .slider {
@@ -94,11 +94,10 @@
     }
 
     .slide img {
-      display: block;
-      max-width: 100%;
-      height: auto;
+      width: 100%;
+      height: 250px;
+      object-fit: cover;
       border-radius: 10px;
-      margin: 0 auto;
     }
 
     .arrow {
@@ -168,12 +167,12 @@
     <div class="slider-container">
       <button class="arrow left" onclick="moveSlide(-1, 'photo')">❮</button>
       <div class="slider" id="photo-slider">
-        <div class="slide"><img src="/images/tommytrojan.jpg" alt="Camp photo 1"></div>
+        <div class="slide"><img src="/images/tommytrojan.png" alt="Camp photo 1"></div>
         <div class="slide"><img src="/images/rainyday.jpg" alt="Camp photo 2"></div>
-        <div class="slide"><img src="/images/chess.jpg" alt="Camp photo 3"></div>
-        <div class="slide"><img src="/images/formal.jpg" alt="Camp photo 4"></div>
+        <div class="slide"><img src="/images/chess.png" alt="Camp photo 3"></div>
+        <div class="slide"><img src="/images/adpi.png" alt="Camp photo 4"></div>
         <div class="slide"><img src="/images/plane.jpg" alt="Camp photo 5"></div>
-        <div class="slide"><img src="/images/moses.jpg" alt="Camp photo 6"></div>
+        <div class="slide"><img src="/images/moses.png" alt="Camp photo 6"></div>
       </div>
       <button class="arrow right" onclick="moveSlide(1, 'photo')">❯</button>
     </div>
