--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
 
     .slide img {
       width: 100%;
-      height: 250px;
-      object-fit: cover;
+      height: auto;
+      object-fit: contain;
       border-radius: 10px;
+      display: block;
+      margin: 0 auto;
     }
 
     .arrow {
