--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </p>
     
     <p>
-      I’ve spent the last decade working with students in just about every setting you can imagine — classrooms, summer camps, tech labs, boats, beaches, and college prep seminars. I was the Youth Programs Director at the Center for Wooden Boats in Seattle, where I ran one of the most beloved and well-attended summer camps in the city. Before that, I led month-long teen expeditions, designed enrichment programs, and coached students through everything from algebra to executive function to finding their college voice.
+      I’ve spent the last 7 years working with students in just about every setting you can imagine — classrooms, summer camps, tech labs, boats, beaches, and college prep seminars. I was the Youth Programs Director at the Center for Wooden Boats in Seattle, where I ran one of the most beloved and well-attended summer camps in the city. Before that, I led outdoor leadership expeditions for teens through the YMCA, designed enrichment programs, and coached students through everything from algebra to executive function to finding their college voice.
     </p>
     
     <p>
@@ -282,7 +282,7 @@
       A: Sessions are one-on-one and fully customized. Some students want academic coaching, others need help managing their workload — and some want to dive into coding or college essays. We focus on what will be most meaningful and helpful each week.</li>
   
       <li><strong>Q: Are sessions in-person or virtual?</strong><br>
-      A: Both! I meet with students virtually via Zoom or in person around West LA (Brentwood, Santa Monica, Beverly Hills, etc.). Most families choose virtual for convenience, but I love both formats.</li>
+      A: Both! I meet with students virtually via Zoom or in person around West LA (Brentwood, Santa Monica, Beverly Hills, etc.). Many families choose virtual for convenience, but I love both formats.</li>
   
       <li><strong>Q: How often do you meet with students?</strong><br>
       A: Most students meet weekly or biweekly. I recommend weekly sessions for consistency and momentum, especially during the school year or application season.</li>
@@ -291,13 +291,14 @@
       A: Only if it supports the student’s goals. Some students love challenges or project work between sessions, while others need space to manage existing school demands. We find the right balance together.</li>
   
       <li><strong>Q: How do we get started?</strong><br>
-      A: Just email or text to set up a free 30-minute intro call. We’ll talk about your student’s needs, what you're hoping for, and how I can help.</li>
+      A: Just fill out the form below or text to set up a free 30-minute intro call. We’ll talk about your student’s needs, what you're hoping for, and how I can help.</li>
     </ul>
   </section>
 
   <section class="cta">
     <h2>Ready to help your student thrive?</h2>
     <p>Let’s connect for a free intro call to see if it’s a fit.</p>
+    <p>I generally respond within 24 hours!</p>
     <form action="https://formspree.io/f/xrblbvlg" method="POST" style="max-width: 500px; margin: 20px auto; text-align: left;">
       <label for="name">Your Name</label><br>
       <input type="text" id="name" name="name" required style="width: 100%; padding: 10px; margin-bottom: 10px;"><br>
